[workspace]
members = [
  "autopilot",
  "core",
  "ruraft",
  "storage/snapshot",
  "storage/bolt",
  "storage/redb",
  "storage/sled",
  "transport/net",
  "transport/tcp",
  "transport/grpc",
  "transport/quinn",
  "transport/s2n",
  "utils"
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/ruraft"
homepage = "https://github.com/al8n/ruraft"
license = "MPL-2.0"
rust-version = "1.75.0"

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
agnostic = { path = "../agnostic/agnostic" }
async-channel = "2"
async-lock = "3"
bytes = "1.5"
futures = "0.3"
humantime-serde = "1.1"
nodecraft = { path = "../nodecraft" }
pin-project = "1.1"
pollster = "0.3"
smol_str = { version = "0.2" }
scopeguard = "1.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = { version = "0.1" }
metrics = { version = "0.21" }
viewit = { version = "0.1.5" }
wg = { version = "0.4", features = ["async"] }
