[workspace]
members = [
  "autopilot",
  "core",
  "memory",
  "ruraft",
  "storage/snapshot",
  "storage/lightwal",
  "transport/net",
  "transport/tcp",
  "transport/grpc",
  "transport/quinn",
  "transport/s2n",
  "utils",
  "wire",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/ruraft"
homepage = "https://github.com/al8n/ruraft"
license = "MPL-2.0"
rust-version = "1.75.0"

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
agnostic = "0.2" 
async-channel = "2"
async-lock = "3"
bytes = "1.5"
byteorder = "1.5"
futures = "0.3"
humantime-serde = "1.1"
nodecraft = { version = "0.2", features = ["transformable"] }
pin-project = "1.1"
pollster = "0.3"
smol_str = { version = "0.2" }
scopeguard = "1.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = { version = "0.1" }
metrics = { version = "0.22" }
viewit = { version = "0.1.5" }
wg = { version = "0.4", features = ["async"] }

