[workspace]
members = [
  "autopilot",
  "core",
  "bindings/common",
  "bindings/python/*",
  "memory",
  "ruraft",
  "storage/snapshot",
  "storage/wal",
  "storage/lightwal",
  "transport/net",
  "transport/tcp",
  "utils",
  "wire",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/ruraft"
homepage = "https://github.com/al8n/ruraft"
license = "MPL-2.0"
rust-version = "1.75.0"

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
agnostic = "0.3"
agnostic-lite = { version = "0.3", features = ["time"] }
async-channel = "2"
async-lock = "3"
bytes = "1"
byteorder = "1"
derive_more = "0.99"
futures = "0.3"
humantime-serde = "1"
nodecraft = { version = "0.3", features = ["transformable"] }
pin-project = "1"
pollster = "0.3"
ruraft-core = { path = "./core" }
ruraft-bindings-common = { path = "./bindings/common" }
ruraft-memory = { path = "./memory" }
ruraft-net = { path = "./transport/net" }
ruraft-snapshot = { path = "./storage/snapshot" }
ruraft-lightwal = { path = "./storage/lightwal" }
ruraft-tcp = { path = "./transport/tcp" }
ruraft-utils = { path = "./utils" }
ruraft-wire = { path = "./wire" }
smol_str = { version = "0.2" }
smallvec = { version = "1" }
scopeguard = "1.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = { version = "0.1" }
metrics = { version = "0.22" }
viewit = { version = "0.1.5" }
wg = { version = "0.8", features = ["future"] }
