[package]
name = "ruraft-core"
version = { workspace = true } 
edition = { workspace = true }
license = { workspace = true }
description = "A placeholder"

[features]
default = []
test = ["parking_lot", "tracing-subscriber", "tempfile"]
metrics = ["dep:metrics"]

serde = ["dep:serde", "dep:serde_repr", "dep:humantime-serde"]

[dependencies]
arc-swap = "1.6"
agnostic = { workspace = true }
async-trait = { workspace = true }
async-lock = { workspace = true }
async-channel = { workspace = true }
atomic = "0.6"
bytes = { workspace = true, features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }

crossbeam-skiplist = "0.1"
futures = { workspace = true }
nodecraft = { workspace = true, features = ["resolver", "agnostic"] }
humantime = "2.1"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1.18"
pin-project = { workspace = true }
rand = "0.8"
rmp-serde = "1.1"
scopeguard = "1.1"

smol_str = { version = "0.2", features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
viewit = { workspace = true }

# serialization/deserialization related dependencies
serde = { workspace = true, optional = true }
serde_repr = { version = "0.1", optional = true }
humantime-serde = { workspace = true, optional = true }

# metrics
metrics = { version = "0.21", optional = true }

# dependencies required by test feature
parking_lot = { version = "0.12", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"], optional = true }
tempfile = { version = "3", optional = true }

[dev-dependencies]
agnostic = { workspace = true, features = ["tokio", "net", "async-std", "smol"] }


