[package]
name = "ruraft-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
metadata.workspace = true
rust-version.workspace = true
description = "A placeholder"

[features]
default = []
test = ["tracing-subscriber", "tempfile"]
metrics = ["dep:metrics"]

serde = ["dep:serde", "dep:serde_repr", "dep:humantime-serde", "ruraft-utils/serde", "dep:serde_millis"]

[dependencies]
arc-swap = "1.6"
auto_impl = "1"
agnostic = { workspace = true }
async-lock = { workspace = true }
async-channel = { workspace = true }
async-broadcast = "0.6"
atomic = "0.6"
atomic-time = "0.1"
bytes = { workspace = true, features = ["serde"] }
byteorder = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
crossbeam-skiplist = "0.1"
either = "1.9"
futures = { workspace = true }
nodecraft = { workspace = true, features = ["resolver", "agnostic"] }
humantime = "2.1"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1.18"
parking_lot = { version = "0.12", features = ["send_guard"] }
pin-project = { workspace = true }
paste = "1"
rand = "0.8"
scopeguard = "1.1"
smol_str = { version = "0.2", features = ["serde"] }
smallvec = "1.11"
thiserror = { workspace = true }
tracing = { workspace = true }
viewit = { workspace = true }
wg = { workspace = true }


ruraft-utils = { path = "../utils", features = ["io"] }

# serialization/deserialization related dependencies
serde = { workspace = true, optional = true, features = ["rc"] }
serde_repr = { version = "0.1", optional = true }
serde_millis = { version = "0.1", optional = true }
humantime-serde = { workspace = true, optional = true }

# metrics
metrics = { workspace = true, optional = true }

# dependencies required by test feature
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"], optional = true }
tempfile = { version = "3", optional = true }

[dev-dependencies]
agnostic = { workspace = true, features = ["tokio", "net", "async-std", "smol"] }
tokio = { version = "1", features = ["full"] }
parking_lot = { version = "0.12", features = ["send_guard"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
tempfile = { version = "3" }
paste = { version = "1" }
