[package]
name = "ruraft-memory"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
metadata.workspace = true

[features]
test = ["smol_str", "ruraft-core/test"]
serde = ["dep:serde", "humantime-serde", "ruraft-core/serde"]
metrics = ["ruraft-core/metrics"]

[dependencies]
agnostic = { workspace = true }
async-channel = { workspace = true }
async-lock = { workspace = true }
futures = { workspace = true }
ruraft-core = { path = "../core" }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
viewit = { workspace = true }

serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }

# test features related dependencies
smol_str = { workspace = true, optional = true }

[dev-dependencies]
agnostic = { workspace = true, features = ["tokio", "async-std", "smol", "net", "dns"] }
ruraft-core = { path = "../core", features = ["test"] }
smol_str = { workspace = true } 
tokio = { version = "1", features = ["full"] }
paste = "1"

[[test]]
name = "async-std-runtime"
path = "tests/async_std.rs"
required-features = ["test", "metrics"]

[[test]]
name = "smol-runtime"
path = "tests/smol.rs"
required-features = ["test", "metrics"]

[[test]]
name = "tokio-runtime"
path = "tests/tokio.rs"
required-features = ["test", "metrics"]
