[package]
name = "ruraft"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
metadata.workspace = true
rust-version.workspace = true
description = "A placeholder"

[features]
default = ["dns"]

tokio = ["agnostic/tokio"]
async-std = ["agnostic/async-std"]
smol = ["agnostic/smol"]

# enable DNS node address resolver
dns = ["agnostic/dns"]

metrics = ["ruraft-core/metrics", "ruraft-memory/metrics"]

test = ["ruraft-core/test", "ruraft-memory/test", "tempfile", "smol_str"]

serde = ["dep:serde", "ruraft-core/serde", "ruraft-memory/serde"]

[dependencies]
agnostic = { workspace = true }
async-channel = { workspace = true }
async-lock = { workspace = true }
bytes = { workspace = true }
crc32fast = "1.3"
futures = { workspace = true }
once_cell = "1.18"
pin-project = "1"
ruraft-core = { path = "../core" }
ruraft-memory = { path = "../memory" }
ruraft-wire = { path = "../wire" }
rand = "0.8"
scopeguard = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
viewit = { workspace = true }

# test features related dependencies
tempfile = { version = "3", optional = true }
smol_str = { version = "0.2", optional = true }

[dev-dependencies]
agnostic = { workspace = true, features = ["tokio", "async-std", "smol", "net", "dns"] }
tokio = { version = "1.32", features = ["full"] }