[package]
name = "ruraft-utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
metadata.workspace = true

[features]
default = []
io = ["futures-io", "pin-project-lite"]
serde = ["dep:serde", "humantime-serde"]

[dependencies]
atomic = "0.6"
bytemuck = { version = "1", features = ["derive"] }

futures-io = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }

serde = { workspace = true,  optional = true }
humantime-serde = { workspace = true, optional = true }