[package]
name = "ruraft-utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
metadata.workspace = true

[features]
default = ["std"]
std = []
io = ["futures-io", "pin-project", "std"]
serde = ["dep:serde", "humantime-serde"]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
futures-io = { version = "0.3", optional = true }
pin-project = { workspace = true, optional = true }

rand = "0.8"

serde = { workspace = true,  optional = true }
humantime-serde = { workspace = true, optional = true }