[package]
name = "ruraft-wire"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
metadata.workspace = true

[features]
default = []
test = ["ruraft-core/test", "smol_str"]
serde = ["dep:serde", "ruraft-core/serde", "smol_str?/serde"]

[dependencies]
bytes = { workspace = true }


futures-util = { version = "0.3", features = ["io"] }
paste = "1"
ruraft-core = { path = "../core" }
thiserror = { workspace = true }

serde = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }

smol_str = { version = "0.2", optional = true }

[dev-dependencies]
ruraft-core = { path = "../core", features = ["test"] }
smol_str = { version = "0.2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }