[package]
name = "ruraft-bindings-common"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
metadata.workspace = true

[features]
default = ["sled"]

metrics = [
  "ruraft-core/metrics",
  "ruraft-lightwal?/metrics",
  "ruraft-memory/metrics",
  "ruraft-snapshot/metrics",
  "ruraft-tcp/metrics",
]

tls = ["ruraft-tcp/tls"]
native-tls = ["ruraft-tcp/native-tls"]

sled = ["ruraft-lightwal/sled"]
redb = ["ruraft-lightwal/redb"]
jammdb = ["ruraft-lightwal/jammdb"]

[dependencies]
agnostic = { workspace = true }
bytes = { workspace = true }
derive_more = "0.99"
enum_dispatch = "0.3"
nodecraft = { workspace = true }
futures = { workspace = true }
paste = "1"
pin-project = { workspace = true }
ruraft-core = { workspace = true }
ruraft-lightwal = { workspace = true, default-features = false, optional = true }
ruraft-memory = { workspace = true }
ruraft-snapshot = { workspace = true }
ruraft-net = { workspace = true }
ruraft-tcp = { workspace = true, default-features = false }
ruraft-utils = { workspace = true }
ruraft-wire = { workspace = true }
