[package]
name = "pyraft"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyraft"
crate-type = ["cdylib"]

[features]
default = ["metrics", "sled", "jammdb", "redb", "tokio", "serde"]

metrics = ["ruraft-lightwal/metrics", "ruraft-core/metrics", "ruraft-tcp/metrics", "ruraft-snapshot/metrics"]

serde = ["dep:serde", "ruraft-core/serde", "ruraft-tcp/serde", "ruraft-snapshot/serde", "pyo3/serde", "nodecraft/serde"]


tokio = ["agnostic/tokio"]
async-std = ["agnostic/async-std"]
smol = ["agnostic/smol"]

sled = ["ruraft-lightwal/sled"]
jammdb = ["ruraft-lightwal/jammdb", "page_size"]
redb = ["ruraft-lightwal/redb"]

[dependencies]
agnostic = { workspace = true }
bytes = { workspace = true }
indexmap = "2"
nodecraft = { workspace = true }
pyo3 = { version = "0.20", features = ["smallvec", "indexmap"] }
pyo3-asyncio = "0.20"
ruraft-core = { path = "../../core" }
ruraft-lightwal = { path = "../../storage/lightwal" }
ruraft-snapshot = { path = "../../storage/snapshot" }
ruraft-tcp = { path = "../../transport/tcp" }
serde = { workspace = true, features = ["derive"], optional = true }
smallvec = "1"
transformable = { version = "0.1", features = ["bytes"] }


page_size = { version = "0.6", optional = true }