[package]
name = "prufty"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "prufty"
crate-type = ["cdylib", "rlib"]

[features]
default = ["metrics", "sled", "jammdb", "redb", "tokio", "serde"]

metrics = ["ruraft-lightwal/metrics", "ruraft-core/metrics", "ruraft-tcp/metrics", "ruraft-snapshot/metrics"]

serde = ["dep:serde", "serde_json", "ruraft-core/serde", "ruraft-tcp/serde", "ruraft-snapshot/serde", "pyo3/serde", "nodecraft/serde", "smol_str/serde", "humantime-serde"]

tokio = ["agnostic/tokio", "pyo3-asyncio/tokio-runtime"]
async-std = ["agnostic/async-std", "pyo3-asyncio/async-std-runtime"]
smol = ["agnostic/smol"]

sled = ["ruraft-lightwal/sled"]
jammdb = ["ruraft-lightwal/jammdb", "page_size"]
redb = ["ruraft-lightwal/redb"]

[dependencies]
agnostic = { workspace = true }
async-lock = { workspace = true }
chrono = "0.4"
derive_more = { workspace = true }
either = { version = "1", features = ["serde"] }
futures = { workspace = true }
indexmap = "2"
nodecraft = { workspace = true }
paste = "1"
pyo3 = { version = "0.20", features = ["smallvec", "indexmap", "either", "experimental-inspect", "chrono"] }
pyo3-asyncio = { version = "0.20", features = ["attributes"] }
pin-project = { workspace = true }
ruraft-core = { workspace = true }
ruraft-ffi = { workspace = true }
ruraft-lightwal = { workspace = true }
ruraft-memory = { workspace = true }
ruraft-snapshot = { workspace = true }
ruraft-tcp = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
humantime-serde = { version = "1", optional = true }
smallvec = "1"
smol_str = { workspace = true }
tracing = { workspace = true }
transformable = { version = "0.1", features = ["bytes", "smallvec"] }

page_size = { version = "0.6", optional = true }