[package]
name = "ruraft-lightwal"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
metadata.workspace = true

[features]
default = ["metrics"]
metrics = ["ruraft-core/metrics", "dep:metrics"]

redb = ["dep:redb"]
sled = ["dep:sled"]
jammdb = ["dep:jammdb"]

[dependencies]
agnostic = { workspace = true }
bytes = { workspace = true }
ruraft-core = { path = "../../core" }
thiserror = { workspace = true }

jammdb = { version = "0.11", optional = true }
redb = { version = "1.4", optional = true }
sled = { version = "0.34", optional = true }

metrics = { workspace = true, optional = true }
