[package]
name = "ruraft-snapshot"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
metadata.workspace = true
rust-version.workspace = true

[features]
test = ["tempfile", "scopeguard", "smol_str", "ruraft-core/test"]
serde = ["dep:serde", "smol_str?/serde", "ruraft-core/serde"]

metrics = ["ruraft-core/metrics"]

[dependencies]
agnostic-lite.workspace = true
byteorder.workspace = true
crc32fast = "1.3"
futures.workspace = true
once_cell = "1.18"
ruraft-core = { path = "../../core" }
ruraft-utils = { path = "../../utils", features = ["io"] }
thiserror.workspace = true
tracing.workspace = true
viewit.workspace = true

serde = { workspace = true, optional = true }

# test features related dependencies
tempfile = { version = "3", optional = true }
scopeguard = { workspace = true, optional = true }
smol_str = { workspace = true, optional = true }

[dev-dependencies]
agnostic-lite = { workspace = true, features = ["tokio", "async-std", "smol"] }
tokio = { version = "1.32", features = ["full"] }
smol_str = { workspace = true }
