[package]
name = "ruraft-net"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
metadata.workspace = true
rust-version.workspace = true
description = "High-level abstraction for transport layer of ruraft"

[features]
default = ["dns"]

serde = ["dep:serde", "humantime-serde", "ruraft-core/serde"]

# enable DNS node address resolver
dns = ["agnostic/dns", "nodecraft/dns"]

metrics = ["ruraft-core/metrics", "dep:metrics"]

test = ["ruraft-core/test", "tempfile"]

[dependencies]
agnostic = { workspace = true }
async-channel = { workspace = true }
async-lock = { workspace = true }
futures = { workspace = true }
nodecraft = { workspace = true, features = ["async", "resolver", "agnostic"] }
pollster = { workspace = true }
ruraft-core = { path = "../../core" }
scopeguard = "1.1"
thiserror = { workspace = true }
tracing = { workspace = true }
viewit = { workspace = true }
wg = { workspace = true }

humantime-serde = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

metrics = { workspace = true, optional = true }

# test features related dependencies
tempfile = { version = "3", optional = true }

[dev-dependencies]
agnostic = { workspace = true, features = ["tokio", "async-std", "smol", "net", "dns"] }
tokio = { version = "1.32", features = ["full"] }
