[package]
name = "ruraft-net"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
metadata.workspace = true
rust-version.workspace = true
description = "High-level abstraction for transport layer of ruraft"

[features]
default = ["dns"]

serde = ["dep:serde", "humantime-serde", "ruraft-core/serde"]

# enable DNS node address resolver
dns = ["nodecraft/dns"]
dns-over-quic = ["dns", "nodecraft/dns-over-quic"]
dns-over-h3 = ["dns", "nodecraft/dns-over-h3"]
dns-over-https-rustls = ["dns", "nodecraft/dns-over-https-rustls"]
dns-over-rustls = ["dns", "nodecraft/dns-over-rustls"]
dns-over-openssl = ["dns", "nodecraft/dns-over-openssl"]
dns-over-native-tls = ["dns", "nodecraft/dns-over-native-tls"]
dns-webpki-roots = ["dns", "nodecraft/dns-webpki-roots"]
dns-native-certs = ["dns", "nodecraft/dns-native-certs"]
dnssec-openssl = ["dns", "nodecraft/dnssec-openssl"]
dnssec-ring = ["dns", "nodecraft/dnssec-ring"]
dnssec = ["dns", "nodecraft/dnssec"]

# enable metrics
metrics = ["ruraft-core/metrics", "dep:metrics"]

test = ["ruraft-core/test", "smol_str", "wg"]

[dependencies]
arc-swap = "1"
agnostic = { workspace = true, features = ["net"] }
async-channel = { workspace = true }
async-lock = { workspace = true }
concurrent-queue = "2"
futures = { workspace = true }
nodecraft = { workspace = true, features = ["async", "resolver", "agnostic"] }
pollster = { workspace = true }
pin-project = { workspace = true }
ruraft-core = { path = "../../core" }
ruraft-utils = { path = "../../utils", features = ["io"] }
ruraft-wire = { path = "../../wire" }
scopeguard = "1.1"
smallvec = "1"
spin = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
viewit = { workspace = true }

humantime-serde = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

metrics = { workspace = true, optional = true }

# test features related dependencies
smol_str = { workspace = true, optional = true }
wg = { workspace = true, optional = true }

[dev-dependencies]
wg = { workspace = true }
agnostic = { workspace = true, features = ["tokio", "async-std", "smol", "net", "dns"] }
tokio = { version = "1.32", features = ["full"] }
smol_str = { workspace = true }
