[package]
name = "ruraft-quic"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
metadata.workspace = true
rust-version.workspace = true
description = "QUIC transport layer implementation for ruraft"

[dependencies]
quinn = "0.10"
